# depot_verifier

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  depot_verifier.cpp  depot_verifier.ini  test_config.h.in  vcpkg-configuration.json  vcpkg.json
acf/: acf.cpp  acf.h
hash/: hash.cpp  hash.h  sha1.hpp
manifest/: DepotFile.h  DepotManifest.cpp  DepotManifest.h  StructReader.cpp  StructReader.h
protobuf/: content_manifest.pb.cc  content_manifest.pb.h
testdata/: appmanifest_999999.acf
tests/: depotverifier_test.cc
utils/: depot_utils.cpp  depot_utils.h  util.cpp  util.h
validation/: validator.cc  validator.h
